# capture

./: .gitignore  Cargo.toml  build.rs  capture.py  index.html
frontend/: package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/gstwebrtc-api/: README.md
frontend/src/lib/: Controls.svelte  Gallery.svelte  Record.svelte  Stream.svelte
gallery/: README.md
src/: camera.rs  frontend.rs  hotspot.rs  main.rs  signalling.rs
src/camera/: configuration.rs
src/hotspot/: linux.rs  windows.rs
